--- a/src/app/facture/list-facture/list-facture.component.html
+++ b/src/app/facture/list-facture/list-facture.component.html
@@ -66,7 +66,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanAddMPModal()">Close
+        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal">Close
         </button>
       </div>
     </div>
