--- a/src/app/full-layout/full-layout.component.html
+++ b/src/app/full-layout/full-layout.component.html
@@ -27,23 +27,7 @@
 
         <!-- Right(Notification and Searchbox -->
         <ul class="nav navbar-nav navbar-right">
-          <li>
-            <!-- Notification -->
-            <div class="notification-box">
-              <ul class="list-inline m-b-0">
-                <li>
-                  <a href="javascript:void(0);" class="right-bar-toggle">
-                    <i class="zmdi zmdi-notifications-none"></i>
-                  </a>
-                  <div class="noti-dot">
-                    <span class="dot"></span>
-                    <span class="pulse"></span>
-                  </div>
-                </li>
-              </ul>
-            </div>
-            <!-- End Notification bar -->
-          </li>
+
           <li class="hidden-xs">
             <form role="search" class="app-search">
               <input type="text" placeholder="Search..."
@@ -61,29 +45,20 @@
   <div class="left side-menu">
     <div class="sidebar-inner slimscrollleft">
 
-      <!--       User
+
             <div class="user-box">
-              <div class="user-img">
-                <img src="assets/images/users/avatar-1.jpg" alt="user-img" title="Mat Helme"
-                     class="img-circle img-thumbnail img-responsive">
-                <div class="user-status offline"><i class="zmdi zmdi-dot-circle"></i></div>
-              </div>
-              <h5><a href="#">Mat Helme</a></h5>
+              <h5 class="label label-success ">Connected</h5>
               <ul class="list-inline">
-                <li>
-                  <a href="#">
-                    <i class="zmdi zmdi-settings"></i>
-                  </a>
-                </li>
+
 
                 <li>
-                  <a href="#" class="text-custom">
+                  <a href="#" (click)="logout()" class="text-custom">
                     <i class="zmdi zmdi-power"></i>
                   </a>
                 </li>
               </ul>
             </div>
-             End User -->
+
 
       <!--- Sidemenu -->
       <div id="sidebar-menu">
