--- a/src/app/production/lot/ajouter-lot/ajouter-lot.component.html
+++ b/src/app/production/lot/ajouter-lot/ajouter-lot.component.html
@@ -6,7 +6,7 @@
 <form class="form-horizontal" [ngBusy]="busy" >
 
 <fieldset>
-
+<!-- TODO ADD button to add formule -->
 <!-- Form Name -->
 <legend>Ajouter un lot</legend>
 
