--- a/src/app/production/produit/ajouter-produit/ajouter-produit.component.html
+++ b/src/app/production/produit/ajouter-produit/ajouter-produit.component.html
@@ -9,7 +9,7 @@
 
 <!-- Form Name -->
 <legend>Ajouter un Produit</legend>
-
+<!--TODO ADD Buttons to get us to add emballage or recipient-->
 <!-- Text input-->
 <div class="form-group">
   <label class="col-md-4 control-label" for="textinput">Label</label>
