--- a/src/app/production/lot/lister-lots/lister-lots.component.html
+++ b/src/app/production/lot/lister-lots/lister-lots.component.html
@@ -31,9 +31,8 @@
             <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
                 aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Coût
             </th>
-
             <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
-                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Actions
+                aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">État
             </th>
           </tr>
           </thead>
@@ -44,15 +43,13 @@
             <td>{{l.quantite}}</td>
             <td>{{l.formule.label}}</td>
             <td>{{l.cout}}</td>
-            <td>
-
-              <a [routerLink]="['/production/lot/'+l.lot_id+'/edit']" class="text-inverse p-r-10"
-                 data-toggle="tooltip" title="Edit">
-                <i class="ti-marker-alt"></i></a>
-
-
-            </td>
-          </tr>
+            <td ><div class= "label" [ngClass]="{'label-success': l.is_finnished,
+            'label-warning':!l.is_finnished }">{{l.is_finnished? "Términé" : "En Production"}}</div>
+             <a *ngIf= "!l.is_finnished" (click)="setFinnished(l.lot_id,i)"
+             class="label label-success "
+              data-toggle="tooltip" title="Edit">
+              <i class="ti-check"></i></a></td>
+            </tr>
           </tbody>
         </table>
 
