genere bon de sortie done

--- a/src/app/vente/sortie/list-sortie/list-sortie.component.html
+++ b/src/app/vente/sortie/list-sortie/list-sortie.component.html
@@ -40,6 +40,8 @@
              (click)="openListeProduits(i)">
               Liste des produits
              </div>
+              <a (click)="bon(i)" class="text-inverse p-r-10" data-toggle="tooltip" title="Bon de Commande">
+                <i class="ti-printer"></i></a>
              </td>
           </tr>
           </tbody>
