list commandes achat works

--- a/src/app/livraison/list-livraison/list-livraison.component.html
+++ b/src/app/livraison/list-livraison/list-livraison.component.html
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" (click)="cleanAddMPModal()">Close
+        <button type="button" class="btn btn-info waves-effect" data-dismiss="modal" >Close
         </button>
       </div>
     </div>
