--- a/src/app/produit-base/list-commande/list-commande.component.html
+++ b/src/app/produit-base/list-commande/list-commande.component.html
@@ -46,7 +46,7 @@
       <td>
         <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-prod-modal"
            (click)="detailsCmd(i)"><i class="fa fa-align-left"></i></a> &nbsp;
-        <a href="#" class="on-default edit-row" data-toggle="modal" data-target="#list-prod-modal"><div class="glyphicon glyphicon-shopping-cart"></div></a> &nbsp;
+        <a href="#/produit/achat/{{cmd.commande_achat_id}}" class="on-default edit-row"><div class="glyphicon glyphicon-shopping-cart"></div></a> &nbsp;
       </td>
     </tr>
     </tbody>
