--- a/src/app/vente/commande/add-commande/add-commande.component.html
+++ b/src/app/vente/commande/add-commande/add-commande.component.html
@@ -113,7 +113,7 @@
 
 <!--adding client form-->
 <div id="add-client-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true">
+     aria-hidden="true" *ngIf="villes">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -126,15 +126,30 @@
           <label class="col-md-12"> <span class="help">Client</span></label>
           <div class="col-md-4">
             <input type="text" class="form-control form-control-line" placeholder="Nom"
-                   [(ngModel)]="clientModal.name" name="name-client">
+                   [(ngModel)]="toAddClient.name" name="name-client">
           </div>
           <div class="col-md-4">
             <input type="email" class="form-control form-control-line" placeholder="Email"
-                   [(ngModel)]="clientModal.email" name="email-client">
+                   [(ngModel)]="toAddClient.email" name="email-client">
           </div>
           <div class="col-md-4">
             <input type="number" class="form-control form-control-line" placeholder="Mobile"
-                   [(ngModel)]="clientModal.mobile" name="mobile-client">
+                   [(ngModel)]="toAddClient.mobile" name="mobile-client">
+          </div>
+          <div class="col-md-4" style="margin-top: 2%">
+            <select [(ngModel)]="toAddClient.type" class="form-control" name="typeSelect">
+              <option *ngFor="let type of types, let i=index" [ngValue]="type">{{type.nom}}</option>
+            </select>
+          </div>
+          <div class="col-md-4" style="margin-top: 2%">
+            <select [(ngModel)]="selectedVille" class="form-control" name="villeSelect">
+              <option *ngFor="let ville of villes, let i=index" [ngValue]="ville">{{ville.nom}}</option>
+            </select>
+          </div>
+          <div class="col-md-4" style="margin-top: 2%">
+            <select [(ngModel)]="toAddClient.region" class="form-control" name="regionSelect">
+              <option *ngFor="let region of selectedVille.region, let i=index" [ngValue]="region">{{region.nom}}</option>
+            </select>
           </div>
           <div class="form-group" style="text-align: center">
             <button *ngIf="!validChampsClient()" disabled class="btn btn-danger" style="margin-top: 0.5%">Confirmer
