add commande done

--- a/src/app/vente/commande/add-commande/add-commande.component.html
+++ b/src/app/vente/commande/add-commande/add-commande.component.html
@@ -36,6 +36,13 @@
         <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
             aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Total
         </th>
+        <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+            aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Remise
+        </th>
+        <th tabindex="0" class="sorting" aria-controls="datatable" style="width: 116px;"
+            aria-label="Start date: activate to sort column ascending" rowspan="1" colspan="1">Gratuités
+        </th>
+
       </tr>
       </thead>
       <tbody>
@@ -55,18 +62,36 @@
         </td>
         <td>
           <div *ngIf="ligne.editMode!=0">
-            <input [(ngModel)]="ligne.quantity" id="quantite" name="quantite" type="number"
+            <input [(ngModel)]="ligne.quantite" id="quantite" name="quantite" type="number"
                    placeholder="Quantité" class="form-control input-md" required="">
           </div>
           <div *ngIf="ligne.editMode==0">
-            {{ligne.quantity}}
+            {{ligne.quantite}}
           </div>
         </td>
         <td>
           {{ligne.produit ? ligne.produit.prix : 0}}
         </td>
         <td>
-          {{ligne.produit && ligne.quantity ? ligne.produit.prix*ligne.quantity : 0}}
+          {{ligne.produit && ligne.quantite ? ligne.produit.prix*ligne.quantite : 0}}
+        </td>
+        <td>
+          <div *ngIf="ligne.editMode!=0">
+            <input [(ngModel)]="ligne.remise" id="remise" name="remise" type="number"
+                   placeholder="Pourcentage" class="form-control input-md" required="">
+          </div>
+          <div *ngIf="ligne.editMode==0">
+            {{ligne.remise}}
+          </div>
+        </td>
+        <td>
+          <div *ngIf="ligne.editMode!=0">
+            <input [(ngModel)]="ligne.gratuite" id="gratuite" name="gratuite" type="number"
+                   placeholder="Gratuités" class="form-control input-md" required="">
+          </div>
+          <div *ngIf="ligne.editMode==0">
+            {{ligne.remise}}
+          </div>
         </td>
         <td>
           <div *ngIf="ligne.editMode!=0">
@@ -94,10 +119,10 @@
       </div>
     </div>
     <div class="col-md-3 col-sm-6 col-xs-6 col-md-offset-3">
-      <p class="text-right"><b>Total:</b> {{onChangePrice()}} DT</p>
+      <p class="text-right"><b>Total:</b> {{sumPrice}} DT</p>
       <p class="text-right">TVA: 19%</p>
       <hr>
-      <h3 class="text-right"> {{onChangePrice()*(19/100)+onChangePrice() }} DT</h3>
+      <h3 class="text-right"> {{sumPrice*(19/100)+sumPrice }} DT</h3>
     </div>
     <div class="hidden-print">
       <div class="pull-right">
